<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="view_map">View on Maps</string>

    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">1809858</string>
    <string name="pref_location_description" translatable="false">Please input CityId</string>



    <string name="pref_TemperatureUnits_title">Temperature Units</string>
    <string name="pref_TemperatureUnits_key">units</string>
    <string name="pref_TemperatureUnits_default">Metric</string>

    <array name="pref_TemperatureUnits_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </array>
    <array name="pref_TemperatureUnits_values">
        <item>metric</item>
        <item>imperial</item>
    </array>


    
</resources>
