<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditTextPreference
        android:title="@string/pref_location_title"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        android:contentDescription="@string/pref_location_description">



    </EditTextPreference>

    <ListPreference
        android:title="@string/pref_TemperatureUnits_title"
        android:key="@string/pref_TemperatureUnits_key"
        android:defaultValue="@string/pref_TemperatureUnits_default"
        android:entries="@array/pref_TemperatureUnits_entries"
        android:entryValues="@array/pref_TemperatureUnits_entries">

    </ListPreference>




</PreferenceScreen>